--- a/01_bonjour_javascript/ESSAI3/style.css
+++ b/01_bonjour_javascript/ESSAI3/style.css
@@ -1,23 +1,19 @@
-.div1,
-.div3,
-.div2 {
-    text-align: center;
-    margin-top: 10px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(255, 238, 0);
+.div1, .div3, .div2 {
+  text-align: center;
+  margin-top: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(255, 238, 0);
 }
-.div1:hover,
-.div3:hover,
-.div2:hover {
-    background-color: rgb(225, 180, 255);
+.div1:hover, .div3:hover, .div2:hover {
+  background-color: rgb(225, 180, 255);
 }
 
 .div2 {
-    background-color: rgb(255, 187, 0);
+  background-color: rgb(255, 187, 0);
 }
 
 .div3 {
-    background-color: rgb(255, 136, 0);
-} /*# sourceMappingURL=style.css.map */
+  background-color: rgb(255, 136, 0);
+}/*# sourceMappingURL=style.css.map */
